fixed the create and put in placeholders to make sure missing images in the upload don't break the code

--- a/app/assets/stylesheets/offers/_new.scss
+++ b/app/assets/stylesheets/offers/_new.scss
@@ -17,8 +17,6 @@
   }
 }
 
-
-
 .left-container {
   position: relative;
   width: 60%;
@@ -31,6 +29,13 @@
   flex-direction: column;
 }
 
+.create-clown-button {
+  width: 40%;
+  border-radius: 10px;
+  position: relative;
+  margin-left: 10px;
+}
+
 .d-contents {
   display: contents;
 }
@@ -40,10 +45,10 @@
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding: 10px;
-  height: 360px;
   margin: 10px;
   display: flex;
   flex-direction: column;
+  flex-grow: 3;
 }
 
 .back-to-clowns-container {
@@ -77,15 +82,6 @@
 .back-to-clowns {
   width: 150px;
   border: 1px solid black;
-}
-
-.preview-container {
-  background-color: white;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  margin: 10px;
-  padding: 10px;
-  height: 75%;
 }
 
 .features-container {
